All langtools tests now pass